fix: header styles on mobile

--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -1,7 +1,7 @@
 .hero-section {
   width: 100%;
   text-align: left;
-  padding: 30px;
+  padding: 30px 0px;
   display: flex;
   align-items: center;
 
